# animessage

./: Cargo.toml  anim.txt  ideas.md
animessages/Bwat Animessage/: animessage.txt
animessages/To My Wifey/: to_my_wifey.txt
animessages/anniv_bwat/: READ_ME.txt  anniv_bwat.txt
animessages/badum_tss/: badum_tss.txt
animessages/cats_night/: cats_night.txt  dick.txt
animessages/given_example/: run.anim
animessages/sunglasses/: include1.txt  sunglasses.txt
animessages/test/: check_numbers.txt  test.anim  test2.anim
animessages/test dns 2/: run.anim
animessages/tutorial/: tutorial.txt  tutorial_new.txt
animessages/very_simple/: very_simple.txt
src/: args.rs  main.rs  parser.rs  term.rs  variable.rs
