[package]
name = "animessage"
description = "Create animated messages for the terminal."
version = "0.30.15"
authors = ["LeSplooch <34457355+LeSplooch@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
anyhow = "1.0.57"
thiserror = "1.0.31"
simple_logger = "2.1.0"
log = "0.4.17"
rodio = "0.15.0"
# rdev = "0.4.5"
parking_lot = "0.12.0"
lazy_static = "1.4.0"
console_engine = "2.3.0"
device_query = "1.1.0"
webbrowser = "0.7.1"
read_input = "0.8.6"
image = "0.24.2"
ctrlc = { version = "3.2.2", features = ["termination"] }
smallvec = "1.8.0"
envmnt = "0.10.0"
term-table = "1.3.2"
inquire = "0.2.1"
viuer = "0.6.1"
console = "0.15.0"
crossterm = "0.23.2"

[[bin]]
name = "animessage"

[lib]
name = "libanimessage"
crate-type = ["cdylib"]
bench = false

[profile.release]
lto = true
incremental = true
